# proteinet-cafa5

./: .gitignore  README.md  config.py  config.yml  inference_routine.py  plot_results.py  preprocessing_routine.py  pyproject.toml  test.py  train_routine.py
data/output/history/train_history/losses/: losses_history_CCO.csv
data/output/history/train_history/scores/: scores_history_BPO.csv  scores_history_MFO.csv
data/output/models/history/: losses_history_MFO.csv  scores_history_BPO.csv  scores_history_CCO.csv  scores_history_MFO.csv
inference/: predict.py
models/history/: losses_history_BPO.csv  losses_history_CCO.csv
postprocessing/train_history/losses/: losses_history_BPO.csv  losses_history_MFO.csv
postprocessing/train_history/scores/: scores_history_CCO.csv
preprocessing/: dataset.py  labels_matrix.py  targets.py
scripts/: inference_routine.py  training_routine.py
src/proteinet/: __main__.py
src/proteinet/infer/: predict.py
src/proteinet/postproc/: metrics.py
src/proteinet/preproc/: dataset.py  targets.py
src/proteinet/train/: train.py
tests/: test_preproc.py
training/: dataset.py  models.py  train.py
